--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ custom.py
 # Ignore generated compile_commands.json
 compile_commands.json
 
+extension_api.json
+
 # Ignore files generated for documentation
 /src/gen
 
