Rename project folder

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = godot-cpp
 	url = https://github.com/godotengine/godot-cpp.git
 	branch = 4.3
+[submodule "shotgun-game/aseprite"]
+	path = shotgun-game/aseprite
+	url = git@github.com-aseprite:dietrichsween137/aseprite.git
