--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -51,6 +51,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: dietrichsween137/aseprite
+          ref: main
           ssh-key: ${{ secrets.Job }}
           path: ./shotgun-game/aseprite
 
