--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -140,10 +140,10 @@ jobs:
         uses: actions/download-artifact@v5
         with:
           name: godot-cpp-template
-          path: bin
+          path: shotgun-game/bin
 
       - name: Unpack Artifacts
-        run: unzip -u bin/godot-cpp-template.zip -d bin
+        run: unzip -u shotgun-game/bin/godot-cpp-template.zip -d shotgun-game/bin
 
       - name: Commit & Push changes
         run: |
