--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -12,20 +12,20 @@ jobs:
         # See https://docs.github.com/en/actions/writing-workflows/choosing-what-your-workflow-does/running-variations-of-jobs-in-a-workflow
         target:
           [
-            { platform: linux, arch: x86_64, os: ubuntu-22.04 },
-            { platform: linux, arch: x86_32, os: ubuntu-22.04 },
-            { platform: linux, arch: arm64, os: ubuntu-22.04-arm },
-            { platform: linux, arch: arm32, os: ubuntu-22.04-arm },
+#            { platform: linux, arch: x86_64, os: ubuntu-22.04 },
+#            { platform: linux, arch: x86_32, os: ubuntu-22.04 },
+#            { platform: linux, arch: arm64, os: ubuntu-22.04-arm },
+#            { platform: linux, arch: arm32, os: ubuntu-22.04-arm },
             { platform: windows, arch: x86_64, os: windows-latest },
-            { platform: windows, arch: x86_32, os: windows-latest },
-            { platform: windows, arch: arm64, os: windows-latest },
-            { platform: macos, arch: universal, os: macos-latest },
-            { platform: android, arch: x86_64, os: ubuntu-22.04 },
-            { platform: android, arch: x86_32, os: ubuntu-22.04 },
-            { platform: android, arch: arm64, os: ubuntu-22.04 },
-            { platform: android, arch: arm32, os: ubuntu-22.04 },
-            { platform: ios, arch: arm64, os: macos-latest },
-            { platform: web, arch: wasm32, os: ubuntu-22.04 },
+#            { platform: windows, arch: x86_32, os: windows-latest },
+#            { platform: windows, arch: arm64, os: windows-latest },
+#            { platform: macos, arch: universal, os: macos-latest },
+#            { platform: android, arch: x86_64, os: ubuntu-22.04 },
+#            { platform: android, arch: x86_32, os: ubuntu-22.04 },
+#            { platform: android, arch: arm64, os: ubuntu-22.04 },
+#            { platform: android, arch: arm32, os: ubuntu-22.04 },
+#            { platform: ios, arch: arm64, os: macos-latest },
+#            { platform: web, arch: wasm32, os: ubuntu-22.04 },
           ]
         target-type: [template_debug, template_release]
         float-precision: [single]
@@ -141,6 +141,7 @@ jobs:
         with:
           name: godot-cpp-template
           path: shotgun-game/bin
+        run: ls shotgun-game/bin
 
       - name: Unpack Artifacts
         run: unzip -u shotgun-game/bin/godot-cpp-template.zip -d shotgun-game/bin
