--- a/shotgun-game/export_presets.cfg
+++ b/shotgun-game/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../Downloads/shotgun-game.exe"
+export_path="../../../../Downloads/shotgun-game.zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -77,7 +77,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../../Downloads/shotgun-game.x86_64"
+export_path="../../../../Downloads/shotgun-game.zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
